데이터 입력

--- a/data/.env
+++ b/data/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=Seoul
 APP_ENV=local
 APP_KEY=base64:MonyodHUAx5Gsf0YHZSjNmsysxaWXaUg/SyAepODUfY=
 APP_DEBUG=true
@@ -8,9 +8,22 @@ APP_URL=http://localhost
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=seoul
+DB_USERNAME=root
+DB_PASSWORD=password
+
+
+#DB_HOST2=218.38.121.117
+#DB_PORT2=3306
+#DB_DATABASE2=peterpanz
+#DB_USERNAME2=dev
+#DB_PASSWORD2=enRjqltptkd~~
+
+DB_HOST2=127.0.0.1
+DB_PORT2=3306
+DB_DATABASE2=dukkubi_real
+DB_USERNAME2=root
+DB_PASSWORD2=password
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
