--- a/data/composer.json
+++ b/data/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "laravel/laravel",
-    "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "name": "Seoul/Seoul",
+    "description": "Seoul",
+    "keywords": [],
     "license": "MIT",
     "type": "project",
     "require": {
@@ -11,6 +11,7 @@
         "laravel/tinker": "~1.0"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^2.4",
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "~1.0",
