--- a/data/.env
+++ b/data/.env
@@ -21,7 +21,7 @@ DB_PASSWORD=password
 
 DB_HOST2=127.0.0.1
 DB_PORT2=3306
-DB_DATABASE2=dukkubi_real
+DB_DATABASE2=agency_renewal
 DB_USERNAME2=root
 DB_PASSWORD2=password
 
@@ -36,11 +36,13 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+# MAIL_HOST=smtp.mailtrap.io
+# MAIL_PORT=2525
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=luritas@duse.co.kr
+MAIL_PASSWORD=zvpgrzeqsyeeyzny
+MAIL_ENCRYPTION=tls
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
