--- a/data/composer.json
+++ b/data/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": ">=7.0.0",
         "fideloper/proxy": "~3.3",
+        "doctrine/dbal": "2.5.*",
         "guzzlehttp/guzzle": "*",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0"
