--- a/data/composer.json
+++ b/data/composer.json
@@ -6,11 +6,12 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
-        "fideloper/proxy": "~3.3",
         "doctrine/dbal": "2.5.*",
+        "fideloper/proxy": "~3.3",
         "guzzlehttp/guzzle": "*",
         "laravel/framework": "5.5.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "tcg/voyager": "^1.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.4",
