--- a/data/composer.json
+++ b/data/composer.json
@@ -11,7 +11,8 @@
         "guzzlehttp/guzzle": "*",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-        "tcg/voyager": "^1.0"
+        "tcg/voyager": "^1.0",
+        "test-hook": "^1.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.4",
